--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/0362e50478.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css"/>
     <title>CARAVAN</title>
   </head>
@@ -15,6 +17,14 @@
         </a>
         
       </h1>
+
+      <div class="social">
+
+        <i class="fab fa-facebook-square"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-instagram"></i>
+
+      </div>
     </header>
 
     <nav>
